LSP: - Bugfix for input options categories in checking if there are custom parameters in a push url - Option groups now have an ability to expand/collapse. When collapsed a summary of non-default configured options is shown. - Question marks in the target should be kept as part of the target url. Additional params should always be added after an additional ?. - Improved (mostly SRT) push param options layout - Fixed option groups:   - 1: Typing in PUSH TARGET will reset all settings set up below   - 2: If you hide settings the settings do not propogate   - 3: Sublist and option categories share the same container class name, causing CSS collisions

--- a/lsp/main.css
+++ b/lsp/main.css
@@ -637,6 +637,68 @@ input[type=radio] {
   margin-bottom: 1em;
   margin-left: 1em;
 }
+.input_container .itemgroup .input_container:first-child > b {
+  cursor: pointer;
+  margin-right: 0.5em;
+}
+.input_container .itemgroup.expanded .input_container:first-child > b:before {
+  content: '▼';
+}
+.input_container .itemgroup .input_container:first-child > b:before {
+  content: '▲';
+  color: var(--accentColor);
+  opacity: 0.5;
+  transform: translateY(-0.1em);
+  display: inline-block;
+}
+.input_container .itemgroup .input_container:first-child:hover > b:before {
+  opacity: 1;
+}
+.input_container .itemgroup .description {
+  display: none;
+}
+.input_container .itemgroup.expanded .description {
+  display: block;
+}
+
+.input_container .itemgroup .summary {
+  font-size: 0.8em;
+  margin: 0;
+  padding-inline: 1.75em;
+}
+.input_container .itemgroup .summary li::marker {
+  margin: 0 0.25em 0 0;
+}
+.input_container .itemgroup .summary:empty {
+  display: flex;
+  flex-flow: row wrap;
+  list-style: none;
+  padding: 0;
+}
+.input_container .itemgroup .summary:empty:after {
+  content: '(Default settings)';
+}
+.input_container .itemgroup .summary:empty {
+  opacity: 0.5;
+}
+.input_container .itemgroup.expanded .summary {
+  display: none;
+}
+.input_container .itemgroup .UIelement {
+  display: none;
+}
+.input_container .itemgroup.expanded .UIelement {
+  display: flex;
+}
+.input_container .itemgroup:not(.expanded) .input_container:has(.summary:empty) {
+  flex-direction: row;
+  align-items: baseline;
+  margin: 0;
+}
+.input_container .itemgroup.expanded .input_container {
+  flex-direction: column;
+  margin: 0.5em 0;
+}
 .input_container .subitem {
   font-size: 0.9em;
   color: #777;
